--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,148 @@
-<h1>Index Page</h1>
+<!--<h1>Index Page</h1>-->
+<%#= link_to "New", new_post_path %>
 
-<% @posts.each do |post| %>
-  <div class="post_wrapper">
-    <h2><%= link_to post.title, post %></h2>
-    <p><%= post.created_at.strftime("%B, %d, %Y") %></p>
+<%# @posts.each do |post| %>
+  <!--<div class="post_wrapper">-->
+  <!--  <h2><#%= link_to post.title, post %></h2>-->
+  <!--  <p><#%= post.created_at.strftime("%B, %d, %Y") %></p>-->
+  <!--</div>-->
+<%# end %>
+
+
+<div class="wrapper">
+  <div class="section group">
+     <div class="col span_1_of_2">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+     
+      <div class="col span_1_of_2">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
   </div>
-<% end %>
+  
+  <div class="section group">
+     <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+     
+      <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+     
+      <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+  </div>
+  
+        <div class="section group">
+     <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+     
+      <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+     
+      <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+  </div>
+  
+        <div class="section group">
+     <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+     
+      <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+     
+      <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+  </div>
+  
+        <div class="section group">
+     <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+     
+      <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+     
+      <div class="col span_1_of_3">
+        <p>Blue Bottle deep v meh, quinoa asymmetrical photo booth 3 wolf moon paleo hoodie pour-over whatever. 
+        Meh Wes Anderson Pinterest fingerstache, XOXO lumbersexual listicle slow-carb cred actually. Odd Future 
+        whatever meggings, Helvetica Shoreditch farm-to-table Blue Bottle fixie sartorial cornhole cred normcore 
+        fap. Kickstarter jean shorts listicle selfies Blue Bottle, seitan XOXO church-key art party. Kale chips 
+        deep v cray, slow-carb ethical tofu cardigan sriracha swag. Keytar lomo kale chips PBR shabby chic. Shabby 
+        chic kale chips master cleanse street art.
+     </div>
+  </div>
+</div> <!--end of wrapper-->
