--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,8 +48,10 @@
          </div>
          
          <div id="tabs">
-            <a href="#" id="volunteer_tab">Volunteer</a>
-            <a href="#" id="donate_tab">Donate</a>
+            <!--<a href="#" id="volunteer_tab">Volunteer</a>-->
+            <%= link_to "Volunteer", root_path, id: "volunteer_tab" %>
+            <!--<a href="#" id="donate_tab">Donate</a>-->
+            <%= link_to "Donate", root_path, id: "donate_tab" %>
          </div>
       </div>
       
@@ -58,14 +60,22 @@
       <nav>
          <div class="wrapper">
                <ul>
-                  <li><a id="home_link" href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Why Give</a></li>
-                  <li><a href="#">Apply For a Grant</a></li>
-                  <li><a href="#">Partner Agencies</a></li>
-                  <li><a href="#">Contact</a></li>
-                  <li><a id="mobile_donate_button" href="#">Donate</a></li>
-                  <li><a id="mobile_volunteer_button" href="#">Volunteer</a></li>
+                  <!--<li><a id="home_link" href="#">Home</a></li>-->
+                  <li><%= link_to "Home", root_path, id: "home_link" %></li>
+                  <!--<li><a href="#">About</a></li>-->
+                  <li><%= link_to "About", root_path %></li>
+                  <!--<li><a href="#">Why Give</a></li>-->
+                  <li><%= link_to "Why Give", root_path %></li>
+                  <!--<li><a href="#">Apply For a Grant</a></li>-->
+                  <li><%= link_to "Apply For a Grant", root_path %></li>
+                  <!--<li><a href="#">Partner Agencies</a></li>-->
+                  <li><%= link_to "Partner Agencies", root_path %></li>
+                  <!--<li><a href="#">Contact</a></li>-->
+                  <li><%= link_to "Contact", root_path %></li>
+                  <!--<li><a id="mobile_donate_button" href="#">Donate</a></li>-->
+                  <li><%= link_to "Donate", root_path, id: "mobile_donate_button" %></li>
+                  <!--<li><a id="mobile_volunteer_button" href="#">Volunteer</a></li>-->
+                  <li><%= link_to "Volunteer", root_path, id: "mobile_volunteer_button" %></li>
                </ul>
           </div>
        <nav>
