--- a/app/assets/stylesheets/main_stylesheet.css.scss
+++ b/app/assets/stylesheets/main_stylesheet.css.scss
@@ -10,7 +10,27 @@ $gold: rgb(255, 150, 0);
 /* universal */
  
 body {
+   font-family: 'Open Sans', sans-serif;
+}
+
+h1 {
+   color: $blue;
+   font-size: 3.5em;
+   padding-top: 50px;
+   font-family: 'Open Sans', sans-serif;
+   font-weight: 400;
+}
+
+h3 {
   font-family: 'Open Sans', sans-serif;
+  font-size: 2em;
+  padding-bottom: 3px;
+}
+
+.sub_heading {
+  border-bottom: 2px solid $red;
+  margin-right: 200px;  
+  
 }
  
 .wrapper{
@@ -18,8 +38,18 @@ body {
    margin: auto;
 }
 
+// .h_line {
+//   background-color: $red;
+//   height: 1px;
+// }
+
+
+
 
 /* header */
+header {
+  margin-bottom: 45px;
+}
 #top_bar{
    background-color: white;
 }
@@ -30,11 +60,6 @@ body {
    float: left;
 }
 
-#title {
-   color: $blue;
-   font-size: 3.5em;
-   padding-top: 50px;
-}
 
 .mobile {
    visibility: hidden;
@@ -102,9 +127,8 @@ body {
 }
 
 .col{
-   background-color: $lightblue;
-   border: 3px solid black;
-   box-sizing: border-box;
+  padding: 0px 30px 0px 30px;
+  box-sizing: border-box;
 }
 
 /* navbar */
@@ -119,31 +143,31 @@ nav {
   }
   li {
     float: left; 
+    a:link, a:visited {
+      display: block;
+      color: white;
+      background-color: $blue;
+      text-align: center;
+      padding: 10px;
+      text-decoration: none;
+      font-size: 1.75em;
+      font-family: 'Open Sans', sans-serif;
+      text-transform: uppercase;
+      letter-spacing: -1px;
+      border-left: 1px solid white;
+      }
+    a:hover, a:active {
+    background-color: white;
+    color: $blue;
+    }
   }
-}
-
-a:link, a:visited {
-   display: block;
-   color: white;
-   background-color: $blue;
-   text-align: center;
-   padding: 10px;
-   text-decoration: none;
-   font-size: 1.75em;
-   font-family: 'Open Sans', sans-serif;
-   text-transform: uppercase;
-   letter-spacing: -1px;
-   border-left: 1px solid white;
 }
 
 #home_link {
    border-left: none;
 }
 
-a:hover, a:active {
-   background-color: white;
-   color: $blue;
-}
+
 
 
 /* Media Queries */
