--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,5 +6,10 @@
 </p>
 
 <p>
+  <%= link_to 'Edit', edit_post_path(@post) %>
+  <%= link_to 'Delete', post_path, method: :delete, data: { confirm: "Are you sure" } %>
+</p>
+
+<p>
   <%= @post.body %>
 </p>
