--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,10 +72,20 @@
       <div style="clear: both;"></div>
     </header>
     
+        <% flash.each do |name, msg| %>
+      <%= content_tag(:div, msg, class: "alert") %>
+    <% end %>
+    
       <%= yield %>
       
     <footer>
-      <%= link_to "New Post", new_post_path %>
+      <% if !user_signed_in? %>
+        <%= link_to "Log In", new_user_session_path %>
+      <% end %>
+      <% if user_signed_in? %>
+        <%= link_to "New Post", new_post_path %>
+        <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      <% end %>
     </footer>
         
      
