--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,11 +87,10 @@
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
       <% end %>
       
-      <%# if user_is_admin? %>
-        <%#= link_to "Admin", admin_path %>
-      <%# end %>
+      <% if user_is_admin? %>
+        <%= link_to "Admin", admin_path %>
+      <% end %>
       
-      <!-- Problem: if no user is signed in, current_user method returns nil so there's an error if you type /admin in url while not signed in; can I change the method in devise or make a new method in the application helpers? -->
     </footer>
         
      
