add pages controller

--- a/app/views/blog_comments/_blog_comment.html.erb
+++ b/app/views/blog_comments/_blog_comment.html.erb
@@ -5,7 +5,7 @@
   <%= blog_comment.body %>
 </p>
 <p>
-  <%= time_ago_in_words(blog_comment.created_at) %> Ago
+  <%= time_ago_in_words(blog_comment.created_at) %> ago
 </p>
 <%= link_to "Delete Comment", [blog_comment.post, blog_comment],
               method: :delete, class: "button", data: { confirm: 'Are you sure?' } %>
