--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
          <div class="wrapper">
                <ul>
                   <li><%= link_to "Home", root_path, id: "home_link" %></li>
-                  <li><%= link_to "About", root_path %></li>
+                  <li><%= link_to "About", about_path %></li>
                   <li><%= link_to "Why Give", root_path %></li>
                   <li><%= link_to "Apply For a Grant", root_path %></li>
                   <li><%= link_to "Partner Agencies", root_path %></li>
@@ -81,6 +81,7 @@
     <footer>
       <% if !user_signed_in? %>
         <%= link_to "Log In", new_user_session_path %>
+        <%= link_to "Sign Up", new_user_registration_path %>
       <% end %>
       
       <% if user_signed_in? %>
