add forum_posts new, create, show actions and views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,7 @@
                   <li><%= link_to "Why Give", root_path %></li>
                   <li><%= link_to "Apply For a Grant", root_path %></li>
                   <li><%= link_to "Partner Agencies", root_path %></li>
+                  <li><%= link_to "Forum", forum_posts_path %></li>
                   <li><%= link_to "Contact", root_path %></li>
                   <li><%= link_to "Donate", root_path, id: "mobile_donate_button" %></li>
                   <li><%= link_to "Volunteer", root_path, id: "mobile_volunteer_button" %></li>
