--- a/app/views/forum_posts/index.html.erb
+++ b/app/views/forum_posts/index.html.erb
@@ -4,3 +4,4 @@
   <h2><%= link_to post.title, post %></h2>
   <p>Published at <%= post.created_at %> by <%= post.user.email %></p>
 <% end %>
+<%= link_to "New Post", new_forum_post_path %>
