--- a/app/views/forum_threads/edit.html.erb
+++ b/app/views/forum_threads/edit.html.erb
@@ -1,11 +1,11 @@
-<h1>New Forum Post</h1>
-<%= form_for @post do |f| %>
-  <% if @post.errors.any? %>
+<h1>Edit Forum Thread</h1>
+<%= form_for @thread do |f| %>
+  <% if @thread.errors.any? %>
     <div id="errors">
-      <h2><%= pluralize(@post.errors.count, "error") %> prevented this
+      <h2><%= pluralize(@thread.errors.count, "error") %> prevented this
       post from saving</h2>
       <ul>
-        <% @post.errors.full_messages.each do |msg| %>
+        <% @thread.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
         <% end %>
       </ul>
@@ -24,7 +24,8 @@
   </p>
   
   <p>
-    <%= f.submit %>
+    <%= f.submit "Edit Thread" %>
   </p>
+  <%= link_to "Cancel", forum_thread_path %>
   
 <% end %>
