--- a/app/assets/stylesheets/main_stylesheet.css.scss
+++ b/app/assets/stylesheets/main_stylesheet.css.scss
@@ -38,6 +38,11 @@ h3 {
    margin: auto;
 }
 
+.form_wrapper {
+  width: 70%;
+  margin: auto;
+}
+
 // .h_line {
 //   background-color: $red;
 //   height: 1px;
