--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,10 @@
-<h1> <%= @post.title %> </h1>
-
-
-<p>
-  Submitted <%= time_ago_in_words(@post.created_at) %> ago
-</p>
-<p>
-  <%= @post.body %>
-</p>
+<div class="wrapper">
+  <h1> <%= @post.title %> </h1>
+  <p>
+    Submitted <%= time_ago_in_words(@post.created_at) %> ago
+  </p>
+  <p>
+    <%= @post.body.html_safe %>
+  </p>
+</div>
 
