--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <div class="wrapper">
   <h1> <%= @post.title %> </h1>
+  <%= image_tag @post.picture.url if @post.picture? %>
   <p>
     Submitted <%= time_ago_in_words(@post.created_at) %> ago
   </p>
