--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), 
+  html: { multipart: true }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
@@ -20,6 +21,8 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+  
+  <%= f.file_field :picture %>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
