--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,6 +87,7 @@
       
       <% if user_signed_in? %>
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <%= link_to "Edit Profile", edit_user_registration_path %>
       <% end %>
       
       <% if user_is_admin? %>
