--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,17 @@
-<div class="wrapper">
+<div class="small_wrapper">
   <h1> <%= @post.title %> </h1>
-  <%= image_tag @post.picture.url if @post.picture? %>
-  <p>
-    Submitted <%= time_ago_in_words(@post.created_at) %> ago
-  </p>
+  <div class="post_picture">
+    <%= image_tag @post.picture.url if @post.picture? %>
+  </div>
   <p>
     <%= @post.body.html_safe %>
   </p>
+  
+  <div class="posted_on">
+    Posted on <%=@post.created_at.strftime("%B, %d, %Y") %>
+  </div>
+  
+  <div style="clear: both;"></div>
+
 </div>
 
