--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -34,7 +34,13 @@
         <%= f.submit %>
       </p>
       <%= f.file_field :picture %>
+      
+      <p>
+      <%= f.label 'Vertical image' %>
+      <%= f.check_box :vertical %>
+      </p>
     <% end %>
+    
   </div>
 </div>
 
